@@ -1,5 +1,6 @@
 next
-- issue 27: indication of messages in main window
+- detect second instance on same port
+- allow multiple profiles (for permanent installation)
 
 svn / trunk
 - implemented drag 'n' drop file transfer
@@ -12,6 +13,7 @@ svn / trunk
 - added polish translation
 - fixed issue 19: Enter-Key inserted newline before sending
 - fixed issue 20: Ask before overwriting files
+- fixed issue 27: indication of messages in main window
 
 version 0.9.9.191
 - implemented configuration dialog
